@@ -79,6 +79,7 @@ exportMethods(getYidx)
 #exportMethods(grad)
 exportMethods(grInvMod)
 exportMethods(grMod)
+exportMethods(iter)
 exportMethods(l2a)
 exportMethods(level)
 exportMethods(m)
