@@ -150,7 +150,7 @@ setMethod("logLik", signature(object = "a4aFit"),
 #' @param obj the object to be subset
 #' @param it iteration to be extracted
 setMethod("iter", "a4aFit", function(obj, it){
-	obj@fitSumm <- obj@fitSumm[,it, drop=FALSE]
+	if(dim(obj@fitSumm)[2]>1) obj@fitSumm <- obj@fitSumm[,it, drop=FALSE]
 	obj@harvest <- iter(obj@harvest, it)
 	obj@stock.n <- iter(obj@stock.n, it)
 	obj@catch.n <- iter(obj@catch.n, it)
